small fonts on header,charity fix

--- a/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
+++ b/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
@@ -405,6 +405,14 @@ ______                         ______   _   _   _____   _____
           kindness and heartfelt service!</ion-label
         >
       </ion-item>
+
+      <ul >
+        <li class="lineheight-80">
+          <ion-text class="fs-12 ion-text-wrap" color="danger"
+            >Receivable: PhilHealth (if patient is a member)</ion-text
+          >
+        </li>
+      </ul>
     </ion-card>
   </div>
 
