--- a/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
+++ b/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
@@ -19,6 +19,13 @@
 <ion-content *ngIf="!isDesktop" id="content">
   <app-chh-app-patient-header [data]="data" [dateAdmitted]="dateAdmitted">
   </app-chh-app-patient-header>
+
+
+
+
+
+
+  
  <!--
   _____                    ______ _   _ _____ _____ 
   |_   _|                   | ___ \ | | |_   _/  __ \
@@ -35,7 +42,7 @@
           <div class="vertical-center">
             <div class="center">
               <img
-                src="assets/img/insurance-pana.png"
+                src="assets/img/pay-venue-insurance-philhealth-rafiki.png"
                 alt="Care of Insurance + PHIC"
               />
             </div>
@@ -154,11 +161,26 @@ ______   _   _   _____   _____
 
 
   <div *ngIf="(method=='Philhealth')">
-    <div class="vertical-center">
-      <div class="center">
-        <img src="assets/img/philhealth.png" alt="Care of Insurance + PHIC" />
-      </div>
-    </div>
+
+
+
+    <ion-grid class="ion-no-padding">
+      <ion-row>
+        <ion-col size="8" offset="2">
+          <div class="vertical-center">
+            <div class="center">
+              <img
+                src="assets/img/philhealth.png"
+                alt="Care of Insurance + PHIC"
+              />
+            </div>
+          </div>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+
+
+
     <div class="vertical-center">
       <div class="center">
         <ion-button
@@ -279,15 +301,20 @@ ______                         ______   _   _   _____   _____
 
 
   <div *ngIf="(method=='Personal-philhealth')">
-    <div class="vertical-center">
-      <div class="center">
-        <img
-          src="assets/img/perso-philhealth.png"
-          class="ion-text-center"
-          alt="Care of Personal & PHIC"
-        />
-      </div>
-    </div>
+    <ion-grid class="ion-no-padding">
+      <ion-row>
+        <ion-col size="8" offset="2">
+          <div class="vertical-center">
+            <div class="center">
+              <img
+                src="assets/img/pay-venue-personal-philhealth-rafiki.png"
+                alt="Care of Insurance + PHIC"
+              />
+            </div>
+          </div>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
     <ion-grid class="ion-no-padding">
       <!-- <ion-button expand="block" fill="outline" (click)="presentCaseRatesModal()" *ngIf="method=='Philhealth'">View Case Rates</ion-button>  -->
       <ion-row>
@@ -397,7 +424,20 @@ ______                         ______   _   _   _____   _____
       -->                          
   <div *ngIf="(method=='Charity')">
     <ion-card mode="ios">
-      <img src="assets/img/charity-rafiki.png" alt="Charity Thanks" />
+      <ion-grid class="ion-no-padding">
+        <ion-row>
+          <ion-col size="8" offset="2">
+            <div class="vertical-center">
+              <div class="center">
+                <img
+                  src="assets/img/pay-venue-charity-rafiki.png"
+                  alt="Care of Insurance + PHIC"
+                />
+              </div>
+            </div>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
 
       <ion-item>
         <ion-label class="ion-text-wrap"
@@ -587,7 +627,8 @@ ______          _    _
 
 
 
-<!--
+  
+ <!--
   _____                    ______ _   _ _____ _____ 
   |_   _|                   | ___ \ | | |_   _/  __ \
     | | _ __  ___   ______  | |_/ / |_| | | | | /  \/
@@ -597,21 +638,20 @@ ______          _    _
                                                      
  -->                                                
  <div *ngIf="(method=='Insurance')">
-  <ion-grid class="ion-no-padding">
+  <!-- <ion-grid class="ion-no-padding">
     <ion-row>
       <ion-col size="8" offset="2">
         <div class="vertical-center">
           <div class="center">
             <img
-              src="assets/img/insurance-pana.png"
+              src="assets/img/pay-venue-insurance-philhealth-rafiki.png"
               alt="Care of Insurance + PHIC"
             />
           </div>
         </div>
       </ion-col>
     </ion-row>
-  </ion-grid>
-
+  </ion-grid> 
   <div class="vertical-center">
     <div class="center">
       <ion-button
@@ -621,7 +661,8 @@ ______          _    _
         >View Case Rates</ion-button
       >
     </div>
-  </div>
+  </div>-->
+
   <ion-card mode="ios" >
     <ion-item>
       <ion-label>&#8369; </ion-label>
@@ -722,11 +763,25 @@ ______   _   _   _____   _____
 
 
 <div *ngIf="(method=='Philhealth')">
-  <div class="vertical-center">
-    <div class="center">
-      <img src="assets/img/philhealth.png" alt="Care of Insurance + PHIC" />
-    </div>
-  </div>
+
+
+
+  <!-- <ion-grid class="ion-no-padding">
+    <ion-row>
+      <ion-col size="8" offset="2">
+        <div class="vertical-center">
+          <div class="center">
+            <img
+              src="assets/img/philhealth.png"
+              alt="Care of Insurance + PHIC"
+            />
+          </div>
+        </div>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
+
   <div class="vertical-center">
     <div class="center">
       <ion-button
@@ -736,7 +791,8 @@ ______   _   _   _____   _____
         >View Case Rates</ion-button
       >
     </div>
-  </div>
+  </div> -->
+
   <ion-card mode="ios" >
     <ion-item disabled="true" hidden>
       <ion-label>Accept PhilHealth Only?</ion-label>
@@ -847,17 +903,22 @@ ______                         ______   _   _   _____   _____
 
 
 <div *ngIf="(method=='Personal-philhealth')">
-  <div class="vertical-center">
-    <div class="center">
-      <img
-        src="assets/img/perso-philhealth.png"
-        class="ion-text-center"
-        alt="Care of Personal & PHIC"
-      />
-    </div>
-  </div>
+  <!-- <ion-grid class="ion-no-padding">
+    <ion-row>
+      <ion-col size="8" offset="2">
+        <div class="vertical-center">
+          <div class="center">
+            <img
+              src="assets/img/pay-venue-personal-philhealth-rafiki.png"
+              alt="Care of Insurance + PHIC"
+            />
+          </div>
+        </div>
+      </ion-col>
+    </ion-row>
+  </ion-grid> 
   <ion-grid class="ion-no-padding">
-    <!-- <ion-button expand="block" fill="outline" (click)="presentCaseRatesModal()" *ngIf="method=='Philhealth'">View Case Rates</ion-button>  -->
+
     <ion-row>
       <ion-col size="12">
         <div class="vertical-center">
@@ -872,14 +933,14 @@ ______                         ______   _   _   _____   _____
         </div>
       </ion-col>
     </ion-row>
-  </ion-grid>
+  </ion-grid>-->
   <!-- <ion-card mode="ios" *ngIf="!isDesktop" >
       <ion-item disabled="true">
         <ion-label>Accept PhilHealth Only?</ion-label> 
         <ion-checkbox color="mango" checked="false" [(ngModel)]="IsPhilhealthOnly" (ionChange)="isPhilhealthOnly()"></ion-checkbox>
       </ion-item>
     </ion-card> -->
-  <ion-card mode="ios">
+  <ion-card mode="ios" >
     <ion-item>
       <ion-label>&#8369; </ion-label>
       <ion-input
@@ -965,7 +1026,20 @@ _____   _
     -->                          
 <div *ngIf="(method=='Charity')">
   <ion-card mode="ios">
-    <img src="assets/img/charity-rafiki.png" alt="Charity Thanks" />
+    <!-- <ion-grid class="ion-no-padding">
+      <ion-row>
+        <ion-col size="8" offset="2">
+          <div class="vertical-center">
+            <div class="center">
+              <img
+                src="assets/img/pay-venue-charity-rafiki.png"
+                alt="Care of Insurance + PHIC"
+              />
+            </div>
+          </div>
+        </ion-col>
+      </ion-row>
+    </ion-grid> -->
 
     <ion-item>
       <ion-label class="ion-text-wrap"
@@ -973,8 +1047,18 @@ _____   _
         kindness and heartfelt service!</ion-label
       >
     </ion-item>
+
+    <ul >
+      <li class="lineheight-80">
+        <ion-text class="fs-12 ion-text-wrap" color="danger"
+          >Receivable: PhilHealth (if patient is a member)</ion-text
+        >
+      </li>
+    </ul>
   </ion-card>
 </div>
+
+
 
 
 
@@ -1011,7 +1095,7 @@ _____   _
           <div class="center">
             <div *ngIf="(method=='Insurance')">
               <img
-                src="assets/img/insurance-pana.png"
+                src="assets/img/pay-venue-insurance-philhealth-rafiki.png"
                 class="ion-text-center"
                 alt="Care of Insurance + PHIC"
               />
@@ -1025,7 +1109,7 @@ _____   _
             </div>
             <div *ngIf="(method=='Personal-philhealth')">
               <img
-                src="assets/img/perso-philhealth.png"
+                src="assets/img/pay-venue-personal-philhealth-rafiki.png"
                 class="ion-text-center"
                 alt="Care of Personal & PHIC"
               />
@@ -1049,6 +1133,26 @@ _____   _
                 >View Case Rates</ion-button
               >
             </div>
+
+            <div *ngIf="(method=='Charity')">
+              <ion-img
+                src="assets/img/pay-venue-charity-rafiki.png"
+                class="ion-text-center"
+              ></ion-img>
+
+            </div>
+
+
+
+         
+
+
+
+
+
+
+
+
           </div>
         </div>
       </ion-col>
