Label consistency changes.

--- a/src/app/pages/in-patient-patient-information/chh-app-professional-fee/chh-app-professional-fee.page.html
+++ b/src/app/pages/in-patient-patient-information/chh-app-professional-fee/chh-app-professional-fee.page.html
@@ -286,7 +286,7 @@ ______             _     _                        _   _                   _
           <ion-icon slot="end" name="wallet-outline"></ion-icon>
         </ion-list-header>
         <ion-item lines="none">
-          <ion-label>Insurance + PhilHealth</ion-label>
+          <ion-label class="ion-text-wrap">Insurance + PhilHealth</ion-label>
           <ion-checkbox
             color="mango"
             slot="end"
@@ -296,7 +296,7 @@ ______             _     _                        _   _                   _
           ></ion-checkbox>
         </ion-item>
         <ion-item lines="none">
-          <ion-label>Personal + PhilHealth</ion-label>
+          <ion-label class="ion-text-wrap">Personal + PhilHealth</ion-label>
           <ion-checkbox
             color="mango"
             slot="end"
@@ -306,7 +306,7 @@ ______             _     _                        _   _                   _
           ></ion-checkbox>
         </ion-item>
         <ion-item lines="none">
-          <ion-label>PhilHealth Only</ion-label>
+          <ion-label class="ion-text-wrap">PhilHealth Only</ion-label>
           <ion-checkbox
             color="mango"
             slot="end"
@@ -316,7 +316,7 @@ ______             _     _                        _   _                   _
           ></ion-checkbox>
         </ion-item>
         <ion-item lines="none">
-          <ion-label>Charity</ion-label>
+          <ion-label class="ion-text-wrap">Charity</ion-label>
           <ion-checkbox
             color="mango"
             slot="end"
@@ -690,7 +690,7 @@ ______             _     _                       ______             _
                 <ion-icon slot="end" name="wallet-outline"></ion-icon>
               </ion-list-header>
               <ion-item lines="none">
-                <ion-label>Insurance + PhilHealth</ion-label>
+                <ion-label class="ion-text-wrap">Insurance + PhilHealth</ion-label>
                 <ion-checkbox
                   color="mango"
                   slot="end"
@@ -700,7 +700,7 @@ ______             _     _                       ______             _
                 ></ion-checkbox>
               </ion-item>
               <ion-item lines="none">
-                <ion-label>Personal + PhilHealth</ion-label>
+                <ion-label class="ion-text-wrap">Personal + PhilHealth</ion-label>
                 <ion-checkbox
                   color="mango"
                   slot="end"
@@ -710,7 +710,7 @@ ______             _     _                       ______             _
                 ></ion-checkbox>
               </ion-item>
               <ion-item lines="none">
-                <ion-label>PhilHealth Only</ion-label>
+                <ion-label class="ion-text-wrap">PhilHealth Only</ion-label>
                 <ion-checkbox
                   color="mango"
                   slot="end"
@@ -720,7 +720,7 @@ ______             _     _                       ______             _
                 ></ion-checkbox>
               </ion-item>
               <ion-item lines="none">
-                <ion-label>Charity</ion-label>
+                <ion-label class="ion-text-wrap">Charity</ion-label>
                 <ion-checkbox
                   color="mango"
                   slot="end"
