--- a/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
+++ b/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
@@ -431,7 +431,7 @@ ______                         ______   _   _   _____   _____
               <div class="center">
                 <img
                   src="assets/img/pay-venue-charity-rafiki.png"
-                  alt="Care of Insurance + PHIC"
+                  alt="Charity"
                 />
               </div>
             </div>
