added no data image, removed padding on transaction summary, fixed ui on desktop mode

--- a/src/app/pages/case-rates/case-rates.page.html
+++ b/src/app/pages/case-rates/case-rates.page.html
@@ -46,10 +46,20 @@
     </ion-list>
   </div>
   <div *ngIf="ionNoData">
-    <img src="assets/img/3973477-no-data-concept-illustration-custom.png" />
-    <div class="ion-text-center">
-      <h3>No results found</h3>
-    </div>
+    <ion-grid >
+      <ion-row>
+        <ion-col size="8" offset="2">
+          <div class="vertical-center">
+            <div class="center">
+              <img
+                src="assets/img/no-data-rafiki.png"
+              
+              />
+            </div>
+          </div>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
   </div>
   <div *ngIf="ionStart">
     <div class="ion-text-center">
@@ -105,10 +115,20 @@
     </ion-list>
   </div>
   <div *ngIf="ionNoData1">
-    <img src="assets/img/3973477-no-data-concept-illustration-custom.png" />
-    <div class="ion-text-center">
-      <h3>No results found</h3>
-    </div>
+    <ion-grid >
+      <ion-row>
+        <ion-col size="8" offset="2">
+          <div class="vertical-center">
+            <div class="center">
+              <img
+                src="assets/img/no-data-rafiki.png"
+              
+              />
+            </div>
+          </div>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
   </div>
   <div *ngIf="ionStart1">
     <div class="ion-text-center">
