--- a/src/app/pages/in-patient-patient-information/chh-app-professional-fee/chh-app-professional-fee.page.html
+++ b/src/app/pages/in-patient-patient-information/chh-app-professional-fee/chh-app-professional-fee.page.html
@@ -64,7 +64,7 @@ ______             _     _                        _   _                   _
   <div *ngIf="ifShowSummary == true">
 
 
-    <ion-grid class="ion-no-padding">
+    <ion-grid >
       <ion-row>
         <ion-col size="8" offset="2">
           <div class="vertical-center">
@@ -487,9 +487,8 @@ ______             _     _                       ______             _
         <app-chh-app-patient-header
           [data]="data"
           [dateAdmitted]="dateAdmitted"
+          *ngIf="!ifShowSummary"
         ></app-chh-app-patient-header>
-      </ion-col>
-      <ion-col size-lg="4" size-md="6">
         <div *ngIf="ifShowSummary == true">
 
           <ion-grid class="ion-no-padding">
@@ -506,6 +505,25 @@ ______             _     _                       ______             _
               </ion-col>
             </ion-row>
           </ion-grid>
+          </div>
+      </ion-col>
+      <ion-col size-lg="4" size-md="6">
+        <div *ngIf="ifShowSummary == true">
+
+          <!-- <ion-grid class="ion-no-padding">
+            <ion-row>
+              <ion-col size="8" offset="2">
+                <div class="vertical-center">
+                  <div class="center">
+                    <img
+                      src="assets/img/online-transactions.png"
+                    
+                    />
+                  </div>
+                </div>
+              </ion-col>
+            </ion-row>
+          </ion-grid> -->
           <ion-item class="ion-no-margin">
             <ion-grid *ngFor="let x of data">
               <ion-row>
@@ -744,6 +762,11 @@ ______             _     _                       ______             _
           >
         </div>
       </ion-col>
+
+      <ion-col size-lg="3" size-md="6">
+
+        </ion-col>
+        <ion-col size-lg="1" size-md="12"></ion-col>
     </ion-row>
   </ion-grid>
 </ion-content>
