--- a/src/app/pages/in-patient-patient-information/transaction-summary/transaction-summary.page.html
+++ b/src/app/pages/in-patient-patient-information/transaction-summary/transaction-summary.page.html
@@ -35,7 +35,7 @@
 
 <ion-content>
 
-  <ion-grid class="ion-no-padding">
+  <ion-grid >
     <ion-row>
       <ion-col size="8" offset="2">
         <div class="vertical-center">
