--- a/src/app/tab-appointments/tab-appointments.page.html
+++ b/src/app/tab-appointments/tab-appointments.page.html
@@ -286,10 +286,28 @@
         </ng-template> -->
 
         <div *ngIf="!objecthandler" >
-          <img src="assets/img/3973477-no-data-concept-illustration-custom.png">
+          <!-- <img src="assets/img/3973477-no-data-concept-illustration-custom.png">
           <div class="ion-text-center">
             <h3> {{this.messages.NO_DATA_AVAILABLE}}</h3>
-          </div>
+          </div> -->
+
+
+          <ion-grid >
+            <ion-row>
+              <ion-col size="8" offset="2">
+                <div class="vertical-center">
+                  <div class="center">
+                    <img
+                      src="assets/img/no-data-rafiki.png"
+                    
+                    />
+                  </div>
+                </div>
+              </ion-col>
+            </ion-row>
+          </ion-grid>
+
+
         </div>
       </ion-col>
     </ion-row>
