updated texts from ms richel

--- a/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
+++ b/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
@@ -90,7 +90,7 @@
     <ul *ngIf="txtInsurancePF">
       <li class="lineheight-80">
         <ion-text class="fs-12 ion-text-wrap" color="danger"
-          >Amenable to PhilHealth and Insurance (HMO) rates.
+          >Amenable to Insurance (HMO) and PhilHealth rates.
         </ion-text>
       </li>
       <li class="lineheight-80 paddingtop-10">
@@ -118,7 +118,7 @@
       </li>
       <li class="lineheight-80 paddingtop-10">
         <ion-text class="fs-12 ion-text-wrap" color="danger"
-          >Please note that actual receivable amount may vary after final computations.</ion-text
+          >Please note that actual receivable amount may vary after final computations from accounting.</ion-text
         >
       </li>
     </ul>
@@ -141,7 +141,7 @@
       </li>
       <li class="lineheight-80 paddingtop-10">
         <ion-text class="fs-12 ion-text-wrap" color="danger"
-          >Please note that actual receivable amount may vary after final computations.
+          >Please note that actual receivable amount may vary after final computations from accounting.
         </ion-text>
       </li>
     </ul>
@@ -390,7 +390,7 @@ ______                         ______   _   _   _____   _____
       </li>
       <li class="lineheight-80 paddingtop-10">
         <ion-text class="fs-12 ion-text-wrap" color="danger"
-          >Please note that actual receivable amount may vary after final computations.</ion-text
+          >Please note that actual receivable amount may vary after final computations from accounting.</ion-text
         >
       </li>
     </ul>
@@ -408,7 +408,7 @@ ______                         ______   _   _   _____   _____
       </li>
       <li class="lineheight-80 paddingtop-10">
         <ion-text class="fs-12 ion-text-wrap" color="danger"
-          >Please note that actual receivable amount may vary after final computations. 
+          >Please note that actual receivable amount may vary after final computations from accounting. 
         </ion-text>
       </li>
     </ul>
@@ -692,7 +692,7 @@ ______          _    _
   <ul *ngIf="txtInsurancePF">
     <li class="lineheight-80">
       <ion-text class="fs-12 ion-text-wrap" color="danger"
-        >Amenable to PhilHealth and Insurance (HMO) rates.
+        >Amenable to Insurance (HMO) and PhilHealth rates.
       </ion-text>
     </li>
     <li class="lineheight-80 paddingtop-10">
@@ -720,7 +720,7 @@ ______          _    _
     </li>
     <li class="lineheight-80 paddingtop-10">
       <ion-text class="fs-12 ion-text-wrap" color="danger"
-        >Please note that actual receivable amount may vary after final computations.</ion-text
+        >Please note that actual receivable amount may vary after final computations from accounting.</ion-text
       >
     </li>
   </ul>
@@ -743,7 +743,7 @@ ______          _    _
     </li>
     <li class="lineheight-80 paddingtop-10">
       <ion-text class="fs-12 ion-text-wrap" color="danger"
-        >Please note that actual receivable amount may vary after final computations.
+        >Please note that actual receivable amount may vary after final computations from accounting.
       </ion-text>
     </li>
   </ul>
@@ -992,7 +992,7 @@ ______                         ______   _   _   _____   _____
     </li>
     <li class="lineheight-80 paddingtop-10">
       <ion-text class="fs-12 ion-text-wrap" color="danger"
-        >Please note that actual receivable amount may vary after final computations.</ion-text
+        >Please note that actual receivable amount may vary after final computations from accounting.</ion-text
       >
     </li>
   </ul>
@@ -1010,7 +1010,7 @@ ______                         ______   _   _   _____   _____
     </li>
     <li class="lineheight-80 paddingtop-10">
       <ion-text class="fs-12 ion-text-wrap" color="danger"
-        >Please note that actual receivable amount may vary after final computations. 
+        >Please note that actual receivable amount may vary after final computations from accounting. 
       </ion-text>
     </li>
   </ul>
