--- a/src/app/pages/in-patient-patient-information/chh-app-professional-fee/chh-app-professional-fee.page.html
+++ b/src/app/pages/in-patient-patient-information/chh-app-professional-fee/chh-app-professional-fee.page.html
@@ -171,7 +171,7 @@ ______             _     _                        _   _                   _
 
     <ul *ngIf="payvenueN == 'X' && data1 <= 0">
       <li class="lineheight-80">
-        <ion-text class="fs-12 ion-text-wrap" color="danger">Amenable to PhilHealth and Insurance (HMO) rates.</ion-text>
+        <ion-text class="fs-12 ion-text-wrap" color="danger">Amenable to Insurance (HMO) and PhilHealth rates.</ion-text>
       </li>
       <li class="lineheight-80  paddingtop-10">
         <ion-text class="fs-12 ion-text-wrap" color="danger">Receivables: Insurance (HMO) + PhilHealth </ion-text>
@@ -200,7 +200,7 @@ ______             _     _                        _   _                   _
       </li>
       <li class="lineheight-80  paddingtop-10">
         <ion-text class="fs-12 ion-text-wrap" color="danger">Please note that actual receivable amount may vary after
-          final computations.</ion-text>
+          final computations from accounting.</ion-text>
       </li>
     </ul>
   
@@ -220,7 +220,7 @@ ______             _     _                        _   _                   _
         </ion-text>
       </li>
       <li class="lineheight-80  paddingtop-10">
-        <ion-text class="fs-12 ion-text-wrap" color="danger">Please note that actual receivable amount may vary after final computations.  </ion-text>
+        <ion-text class="fs-12 ion-text-wrap" color="danger">Please note that actual receivable amount may vary after final computations from accounting.  </ion-text>
       </li>
     </ul>
   
@@ -583,7 +583,7 @@ ______             _     _                       ______             _
           </ion-item>
           <ul *ngIf="payvenueN == 'X' && data1 <= 0">
             <li class="lineheight-80">
-              <ion-text class="fs-12 ion-text-wrap" color="danger">Amenable to PhilHealth and Insurance (HMO) rates.</ion-text>
+              <ion-text class="fs-12 ion-text-wrap" color="danger">Amenable to Insurance (HMO) and PhilHealth rates.</ion-text>
             </li>
             <li class="lineheight-80  paddingtop-10">
               <ion-text class="fs-12 ion-text-wrap" color="danger">Receivables: Insurance (HMO) + PhilHealth </ion-text>
@@ -612,7 +612,7 @@ ______             _     _                       ______             _
             </li>
             <li class="lineheight-80  paddingtop-10">
               <ion-text class="fs-12 ion-text-wrap" color="danger">Please note that actual receivable amount may vary after
-                final computations.</ion-text>
+                final computations from accounting.</ion-text>
             </li>
           </ul>
         
@@ -632,7 +632,7 @@ ______             _     _                       ______             _
               </ion-text>
             </li>
             <li class="lineheight-80  paddingtop-10">
-              <ion-text class="fs-12 ion-text-wrap" color="danger">Please note that actual receivable amount may vary after final computations.  </ion-text>
+              <ion-text class="fs-12 ion-text-wrap" color="danger">Please note that actual receivable amount may vary after final computations from accounting.  </ion-text>
             </li>
           </ul>
         
