--- a/src/app/pages/in-patient-patient-information/transaction-summary/transaction-summary.page.html
+++ b/src/app/pages/in-patient-patient-information/transaction-summary/transaction-summary.page.html
@@ -120,7 +120,7 @@
   </ion-item>
   <ul *ngIf="payvenueN == 'X' && data1 <= 0">
     <li class="lineheight-80">
-      <ion-text class="fs-12 ion-text-wrap" color="danger">Amenable to PhilHealth and Insurance (HMO) rates.</ion-text>
+      <ion-text class="fs-12 ion-text-wrap" color="danger">Amenable to Insurance (HMO) and PhilHealth rates.</ion-text>
     </li>
     <li class="lineheight-80  paddingtop-10">
       <ion-text class="fs-12 ion-text-wrap" color="danger">Receivables: Insurance (HMO) + PhilHealth </ion-text>
@@ -149,7 +149,7 @@
     </li>
     <li class="lineheight-80  paddingtop-10">
       <ion-text class="fs-12 ion-text-wrap" color="danger">Please note that actual receivable amount may vary after
-        final computations.</ion-text>
+        final computations from accounting.</ion-text>
     </li>
   </ul>
 
@@ -169,7 +169,7 @@
       </ion-text>
     </li>
     <li class="lineheight-80  paddingtop-10">
-      <ion-text class="fs-12 ion-text-wrap" color="danger">Please note that actual receivable amount may vary after final computations.  </ion-text>
+      <ion-text class="fs-12 ion-text-wrap" color="danger">Please note that actual receivable amount may vary after final computations from accounting.  </ion-text>
     </li>
   </ul>
 
